<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/eventId" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:id="@+id/clientLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/clientId_header"
            android:id="@+id/tvClientIdHeader" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/tvClientId" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:id="@+id/timeLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_header"
            android:id="@+id/tvTimeHeader" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/tvTime" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:id="@+id/runLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/run_header"
            android:id="@+id/tvRunHeader" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/tvRun" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:id="@+id/pickupLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pickup_header"
            android:id="@+id/tvpickupHeader" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/tvPickup" />
    </LinearLayout>

</LinearLayout>