<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dartstransit.latetrips.MsgDetails">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/clientId_str"
             />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=":"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/passenger_name"
             />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=":"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sched_time"
             />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=":"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/run_type"
             />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=":"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/est_pu"
            android:id="@+id/tvEst_Pu"
             />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=":"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mins_late"
            android:id="@+id/late_onBoard"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=":"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/run_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=":"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/driver_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=":"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
    </LinearLayout>
    <Space
        android:layout_width="10dp"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/clientId"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/passenger_name"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/sch_time"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/run_type"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/est_pu"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/time"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/run_name"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/driver_name"
            android:text=" "/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
    </LinearLayout>

</LinearLayout>
